# CairnModManager

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: announce.yml  release.yml
src/: App.css  App.tsx  composition.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/domain/: bbcode.ts  computeUpdateSet.ts  detectConflicts.ts  downloadRecord.ts  extractionPlan.ts  formatBytes.ts  installedMod.ts  melonPreferences.ts  modRef.ts  modVersion.ts  nxm.ts  paths.ts  reconcileInstalledMods.ts  resolveDependencies.ts  snapshotPlan.ts  sortMods.ts  steamVdf.ts  stripMarkup.ts  version.ts
src/hooks/: useAsyncAction.ts
src/infra/tauri/: events.ts  (+9 more)
src/ports/: AppUpdatePort.ts  ArchivePort.ts  DeepLinkPort.ts  FileSystemPort.ts  HttpPort.ts  PlatformPort.ts  ProcessPort.ts  ProgressPort.ts  SettingsPort.ts  SnapshotPort.ts
src/services/: BackupService.ts  ConfigEditorService.ts  GameDetectionService.ts  InstallService.ts  MelonLoaderService.ts  NxmHandoffService.ts  ProcessLockService.ts  ProfileService.ts  SettingsService.ts  UpdateService.ts
src/sources/: modSource.ts  nexusSource.ts  sourceRegistry.ts  thunderstoreSource.ts
src/state/: ContainerContext.tsx  appLogStore.ts  appUpdateStore.ts  downloadHistoryStore.ts  gameRunningStore.ts  installStore.ts  logTabStore.ts  logTailStore.ts  profileStore.ts  settingsStore.ts  toastStore.ts  useModDependencies.ts  useModSources.ts
(+32 files in other folders)
