[package]
name = "cairn-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cairn_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-http = "2.5.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-store = "2.4.3"
tauri-plugin-persisted-scope = "2.3.7"
tauri-plugin-process = "2.3.1"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-updater = "2"
winreg = "0.56.0"
sysinfo = "0.39.6"

# single-instance is what makes nxm:// deep-links reach an already-running instance on
# Windows/Linux (macOS gets this from the OS for free) — only needed on desktop targets.
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2.4.3", features = ["deep-link"] }

